# oc-botwatch

./: .gitignore  README.md  pyproject.toml  supplementary_bots.txt  supplementary_llm_bots.txt
.github/workflows/: lint.yml  test.yml
oc_botwatch/: classify.py  visualize.py
output/: daily_traffic.csv  daily_traffic_by_service.csv
tests/: test_integration.py
